image gap fixed

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -123,7 +123,7 @@
   }
 }
 
-@media (min-width: 1100px) {
+@media (min-width: 768px) {
   .home-lg {
     color: white;
     padding-top: 150px;
